--- a/package.json
+++ b/package.json
@@ -9,10 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "~19.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-picker/picker": "2.6.1",
+    "@react-native/normalize-colors": "^0.75.0-main",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.23",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "expo": "~50.0.7",
+    "expo-app-loading": "^2.1.1",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "formik": "^2.4.5",
+    "moment": "^2.30.1",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
+    "react-navigation-header-buttons": "^11.2.1",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
