--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.23",
     "@reduxjs/toolkit": "^2.2.1",
-    "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "expo": "~50.0.7",
     "expo-app-loading": "^2.1.1",
@@ -42,10 +41,14 @@
     "react-navigation-header-buttons": "^11.2.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "typescript": "^5.3.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "private": true
 }
