--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
   },
   "extends": "expo/tsconfig.base"
 }
